// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxInput Component CheckboxInput renders highlighted 1`] = `
<div>
  <div
    class="field gds-checkbox-container"
  >
    <label
      class="input-checkbox-field-read-only"
    >
      <div
        class="checkbox-marker"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 0
    </label>
    <label
      class="input-checkbox-field-read-only input-checkbox-field-checked"
    >
      <div
        class="checkbox-marker"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square-check"
        />
      </div>
      checkbox label 1
    </label>
    <label
      class="input-checkbox-field-read-only"
    >
      <div
        class="checkbox-marker"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 2
    </label>
    <label
      class="input-checkbox-field-read-only"
    >
      <div
        class="checkbox-marker"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 3
    </label>
    <label
      class="input-checkbox-field-read-only field-highlighted"
    >
      <div
        class="checkbox-marker"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 4
    </label>
    <label
      class="input-checkbox-field-read-only"
    >
      <div
        class="checkbox-marker"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square"
        />
      </div>
      checkbox label 5
    </label>
  </div>
</div>
`;

exports[`CheckboxInput Component CheckboxInput renders with input 1`] = `
<div>
  <div
    class="field gds-checkbox-container"
  >
    <label
      class=""
    >
      <div
        class="checkbox-marker"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 0
    </label>
    <label
      class="input-checkbox-field-checked"
    >
      <div
        class="checkbox-marker"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fas,square-check"
        />
      </div>
      checkbox label 1
    </label>
    <label
      class=""
    >
      <div
        class="checkbox-marker"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 2
    </label>
    <label
      class=""
    >
      <div
        class="checkbox-marker"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 3
    </label>
    <label
      class=""
    >
      <div
        class="checkbox-marker"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 4
    </label>
    <label
      class=""
    >
      <div
        class="checkbox-marker"
        role="checkbox"
      >
        <i
          class="icon"
          icon="fal,square"
        />
      </div>
      checkbox label 5
    </label>
  </div>
</div>
`;

exports[`CheckboxInput Component CheckboxInput renders with no options 1`] = `
<div>
  <div
    class="field gds-checkbox-container"
  />
</div>
`;
